[gd_scene load_steps=5 format=3 uid="uid://spvfo0k2fnj8"]

[ext_resource type="Script" path="res://scripts/clams.gd" id="1_vtsoi"]
[ext_resource type="PackedScene" uid="uid://bbmjh3ynafhyk" path="res://scenes/hud.tscn" id="2_fpw34"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_05cu7"]
height = 1.75

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6bfgf"]
height = 1.5
radius = 1.25

[node name="Clams" type="CharacterBody3D" groups=["killable"]]
script = ExtResource("1_vtsoi")
bullet_collision = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_05cu7")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="SpotLight3D" type="SpotLight3D" parent="Head/Camera3D"]
light_energy = 10.0
spot_range = 15.0
spot_angle = 35.0

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_energy = 0.1
omni_range = 2.5

[node name="KillBox" type="Area3D" parent="."]
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000523806, 0.00631618, 0.000594378)
shape = SubResource("CylinderShape3D_6bfgf")

[node name="StaminaRechargeTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("2_fpw34")]

[connection signal="body_entered" from="KillBox" to="." method="_on_kill_box_body_entered"]
[connection signal="timeout" from="StaminaRechargeTimer" to="." method="recharge_stamina"]

[editable path="HUD"]
